--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-	    "name": "worker-name",
-	    "compatibility_date": "2026-01-06",
-	    "main": "index.html"
-	}
+    "name": "godlovescc",
+    "compatibility_date": "2026-01-06",
+    "main": "index.html"
+}
